unpackaged/main/default/objects/sfsp__AttainmentPlanRowDetail__c/sfsp__AttainmentPlanRowDetail__c.object-meta.xml
<CustomObject>
    <label>Attainment Plan Row Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attainment Plan Row Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>