unpackaged/main/default/objects/sfsp__AttainmentPlanRowDetail__c/fields/sfsp__Attainment_Month12__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Attainment_Month12__c</fullName>
    <label>Attainment Month 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>