unpackaged/main/default/objects/sfsp__AttainmentPlanRowDetail__c/fields/sfsp__AttainmentPlanRow__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AttainmentPlanRow__c</fullName>
    <label>Attainment Plan Row</label>
    <referenceTo>sfsp__AttainmentPlanRow__c</referenceTo>
    <relationshipLabel>Attainment Plan Row Details</relationshipLabel>
    <relationshipName>AttainmentPlanRowDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>