unpackaged/main/default/objects/sfsp__AttainmentPlanRowDetail__c/fields/sfsp__IsCustomDetailRow__c.field-meta.xml
<CustomField>
    <fullName>sfsp__IsCustomDetailRow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Detail Row</label>
    <type>Checkbox</type>
</CustomField>